--- a/DrMmoServer/MmoConsole/MmoConsole.csproj
+++ b/DrMmoServer/MmoConsole/MmoConsole.csproj
@@ -14,5 +14,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DarkRift.Server\DarkRift.Server.csproj" />
+    <ProjectReference Include="..\MmoCommon\MmoCommon.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="PubSub\" />
   </ItemGroup>
 </Project>
